--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <bukkit.plugin.description>${project.description}</bukkit.plugin.description>
         
         <bukkit.plugin.main>${project.groupId}.shulker.ShulkerPlugin</bukkit.plugin.main>
-        <bukkit.plugin.version>1.0.0</bukkit.plugin.version>
+        <bukkit.plugin.version>1.1.0</bukkit.plugin.version>
         <bukkit.plugin.author>SirBlobman</bukkit.plugin.author>
     </properties>
     
@@ -42,15 +42,66 @@
             <version>${spigot.version}</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- SirBlobmanAPI Menu -->
+        <dependency>
+            <groupId>com.SirBlobman.api</groupId>
+            <artifactId>menu</artifactId>
+            <version>2.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     
     <build>
+        <defaultGoal>clean install</defaultGoal>
         <finalName>${bukkit.plugin.name}-${bukkit.plugin.version}</finalName>
+
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
                 <filtering>true</filtering>
             </resource>
         </resources>
+
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.4</version>
+
+                <configuration>
+                    <artifactSet>
+                        <includes>
+                            <include>com.SirBlobman.api:*</include>
+                        </includes>
+                    </artifactSet>
+
+                    <relocations>
+                        <relocation>
+                            <pattern>com.SirBlobman.api</pattern>
+                            <shadedPattern>com.SirBlobman.shulker.core</shadedPattern>
+                        </relocation>
+                    </relocations>
+
+                    <filters>
+                        <filter>
+                            <artifact>*:*</artifact>
+                            <excludes>
+                                <exclude>META-INF/*.MF</exclude>
+                            </excludes>
+                        </filter>
+                    </filters>
+                </configuration>
+
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
 </project>
