--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
     
-    <groupId>com.SirBlobman</groupId>
-    <artifactId>ShulkerPackX</artifactId>
+    <groupId>com.github.sirblobman</groupId>
+    <artifactId>shulker</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     
     <name>ShulkerPackX</name>
@@ -17,12 +17,12 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         
-        <bukkit.plugin.name>${project.artifactId}</bukkit.plugin.name>
+        <bukkit.plugin.name>${project.name}</bukkit.plugin.name>
         <bukkit.plugin.prefix>${project.name}</bukkit.plugin.prefix>
         <bukkit.plugin.description>${project.description}</bukkit.plugin.description>
         
-        <bukkit.plugin.main>${project.groupId}.shulker.ShulkerPlugin</bukkit.plugin.main>
-        <bukkit.plugin.version>1.1.0</bukkit.plugin.version>
+        <bukkit.plugin.main>${project.groupId}.${project.artifactId}.ShulkerPlugin</bukkit.plugin.main>
+        <bukkit.plugin.version>1.2.0</bukkit.plugin.version>
         <bukkit.plugin.author>SirBlobman</bukkit.plugin.author>
     </properties>
     
@@ -32,6 +32,12 @@
 			<id>spigot-repo</id>
 			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
 		</repository>
+
+        <!-- CodeMC Repository -->
+        <repository>
+            <id>codemc-public</id>
+            <url>https://repo.codemc.io/repository/maven-public/</url>
+        </repository>
     </repositories>
     
     <dependencies>
@@ -43,65 +49,23 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- SirBlobmanAPI Menu -->
+        <!-- SirBlobmanCore -->
         <dependency>
-            <groupId>com.SirBlobman.api</groupId>
-            <artifactId>menu</artifactId>
-            <version>2.0-SNAPSHOT</version>
-            <scope>compile</scope>
+            <groupId>com.github.sirblobman.api</groupId>
+            <artifactId>core</artifactId>
+            <version>2.1-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     
     <build>
-        <defaultGoal>clean install</defaultGoal>
         <finalName>${bukkit.plugin.name}-${bukkit.plugin.version}</finalName>
-
+        <defaultGoal>clean install</defaultGoal>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
                 <filtering>true</filtering>
             </resource>
         </resources>
-
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.4</version>
-
-                <configuration>
-                    <artifactSet>
-                        <includes>
-                            <include>com.SirBlobman.api:*</include>
-                        </includes>
-                    </artifactSet>
-
-                    <relocations>
-                        <relocation>
-                            <pattern>com.SirBlobman.api</pattern>
-                            <shadedPattern>com.SirBlobman.shulker.core</shadedPattern>
-                        </relocation>
-                    </relocations>
-
-                    <filters>
-                        <filter>
-                            <artifact>*:*</artifact>
-                            <excludes>
-                                <exclude>META-INF/*.MF</exclude>
-                            </excludes>
-                        </filter>
-                    </filters>
-                </configuration>
-
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
     </build>
 </project>
