--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,11 @@
     
     <name>ShulkerPackX</name>
     <description>A simple plugin that allows you to open shulker boxes without placing them.</description>
+    <url>https://www.spigotmc.org/threads/453225/</url>
     
     <properties>
         <java.version>1.8</java.version>
-        <spigot.version>1.11.2-R0.1-SNAPSHOT</spigot.version>
+        <spigot.version>1.12.2-R0.1-SNAPSHOT</spigot.version>
         
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -21,9 +22,8 @@
         <bukkit.plugin.prefix>${project.name}</bukkit.plugin.prefix>
         <bukkit.plugin.description>${project.description}</bukkit.plugin.description>
         
-        <bukkit.plugin.main>${project.groupId}.${project.artifactId}.ShulkerPlugin</bukkit.plugin.main>
-        <bukkit.plugin.version>1.2.1</bukkit.plugin.version>
-        <bukkit.plugin.author>SirBlobman</bukkit.plugin.author>
+        <bukkit.plugin.main>com.github.sirblobman.shulker.ShulkerPlugin</bukkit.plugin.main>
+        <bukkit.plugin.version>1.3.0</bukkit.plugin.version>
     </properties>
     
     <repositories>
@@ -53,7 +53,7 @@
         <dependency>
             <groupId>com.github.sirblobman.api</groupId>
             <artifactId>core</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.2-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>    
