--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,17 +1,17 @@
-name: "${bukkit.plugin.name}"
-prefix: "${bukkit.plugin.prefix}"
-description: "${bukkit.plugin.description}"
-website: "${project.url}"
+name: "@bukkit.plugin.name@"
+prefix: "@bukkit.plugin.prefix@"
+description: "@bukkit.plugin.description@"
+website: "@bukkit.plugin.website@"
 
-main: "${bukkit.plugin.main}"
-version: "${bukkit.plugin.version}"
+main: "@bukkit.plugin.main@"
+version: "@bukkit.plugin.version@"
 api-version: "1.13"
 
-depend:
-  - "SirBlobmanCore"
-
 authors:
-  - "${bukkit.plugin.author}"
+  - "SirBlobman"
+
+depend:
+  - "BlueSlimeCore"
 
 permissions:
   shulkerpackx.shift.place:
