--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,29 @@
 # Set this to true to get extra console output.
 # Not necessary for most servers unless there is a bug.
+# Default: false
 debug-mode: false
+
+shop-menu:
+  # Set this to true to enable the ShulkerPackX shop menu.
+  # Default: true
+  enabled: true
+  
+  # Change the prices for each shulker box here.
+  price:
+    SHULKER_BOX: 1.0
+    WHITE_SHULKER_BOX: 5.0
+    ORANGE_SHULKER_BOX: 5.0
+    MAGENTA_SHULKER_BOX: 5.0
+    LIGHT_BLUE_SHULKER_BOX: 5.0
+    YELLOW_SHULKER_BOX: 5.0
+    LIME_SHULKER_BOX: 5.0
+    PINK_SHULKER_BOX: 5.0
+    GRAY_SHULKER_BOX: 5.0
+    LIGHT_GRAY_SHULKER_BOX: 5.0
+    CYAN_SHULKER_BOX: 5.0
+    PURPLE_SHULKER_BOX: 5.0
+    BLUE_SHULKER_BOX: 5.0
+    BROWN_SHULKER_BOX: 5.0
+    GREEN_SHULKER_BOX: 5.0
+    RED_SHULKER_BOX: 5.0
+    BLACK_SHULKER_BOX: 5.0
