--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
-version.base=1.6.1
-version.beta=false
-spigot.version=1.14.4-R0.1-SNAPSHOT
+version.api=1.7-SNAPSHOT
+version.base=1.7.0
+version.beta=true
+spigot.version=1.16.5-R0.1-SNAPSHOT
 bukkit.plugin.name=ShulkerPackX
 bukkit.plugin.prefix=ShulkerPackX
 bukkit.plugin.description=A simple plugin that allows you to open shulker boxes without placing them.
