--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,11 +1,13 @@
-name: "${bukkit.plugin.name}"
-prefix: "${bukkit.plugin.prefix}"
-description: "${bukkit.plugin.description}"
-website: "${bukkit.plugin.website}"
+name: "${pluginName}"
+prefix: "${pluginPrefix}"
+description: "${pluginDescription}"
+website: "${pluginWebsite}"
 
-main: "${bukkit.plugin.main}"
-version: "${bukkit.plugin.version}"
-api-version: "1.14"
+main: "${pluginMainClass}"
+version: "${pluginVersion}"
+api-version: "1.16"
+
+folia-supported: true
 
 authors:
   - "SirBlobman"
