--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.parallel=true
 org.gradle.caching=true
 version.api=1.7-SNAPSHOT
 version.base=1.7.0
-version.beta=true
+version.beta=false
 spigot.version=1.16.5-R0.1-SNAPSHOT
 bukkit.plugin.name=ShulkerPackX
 bukkit.plugin.prefix=ShulkerPackX
